<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:id="@+id/infoviewlinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fbviewEventHeadlineview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_event_name"
            android:textSize="20dp" />

        <RelativeLayout
            android:id="@+id/fbdaterelative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true">

            <TextView
                android:id="@+id/fbviewEventdatetxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/fbviewEventdateview"
                android:layout_alignParentLeft="true"
                android:text="@string/date_text"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/fbviewEventdateview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/fbviewEventdatetxt"
                android:hint="@string/date_format"
                android:textSize="15dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/fbtimerelative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true">

            <TextView
                android:id="@+id/fbviewEventtimetxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/fbviewEventtimeview"
                android:layout_alignParentLeft="true"
                android:text="@string/time_text"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/fbviewEventtimeview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/fbviewEventtimetxt"
                android:hint="@string/time_format"
                android:textSize="15dp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/fbviewEventSynopsysview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_event_synopsis"
            android:textSize="15dp" />

        <ScrollView
            android:id="@+id/fbviewEventInformtionview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbars="vertical">

            <TextView
                android:id="@+id/fbviewEventInfoview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_information_text"
                android:textSize="15dp" />
        </ScrollView>

        <RelativeLayout
            android:id="@+id/fbpartrelative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true">

            <TextView
                android:id="@+id/fbviewEventParticipatorsnotxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/fbviewEventParticipatorsno"
                android:layout_alignParentLeft="true"
                android:text="@string/max_participators_no"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/fbviewEventParticipatorsno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/fbviewEventParticipatorsnotxt"
                android:inputType="number" />

        </RelativeLayout>

        <TextView
            android:id="@+id/fbviewEventhostname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/host_name"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/fbRegistrationIsClosed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registration_is_closed"
            android:textColor="#ff0004"
            android:visibility="invisible"
            android:textSize="15dp" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/fbviewactivitybutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="100"
        app:layout_anchor="@id/infoviewlinearLayout"
        app:layout_anchorGravity="bottom|left|end">

        <LinearLayout
            android:id="@+id/fbviewactivitybutton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        </LinearLayout>

        <LinearLayout
            android:id="@+id/fbviewactivitybutton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/fbviewregtoeventtbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:enabled="true"
                android:onClick="RegisterEventbtn"
                android:text="@string/register_event_btn" />


            <Button
                android:id="@+id/fbviewCancelAddEventbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:onClick="CancelAddEventbtn"
                android:text="@string/Cancel_btn" />
        </LinearLayout>
    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>
