<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.goodthinking.younglod.user.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/HelloMessage"/>
        <ImageView
            android:id="@+id/Amuta_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/mahshevatova"
            android:layout_marginTop="8dp"/>



        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toRecycler_with_firebase"
            android:text="@string/valid_events"
            android:onClick="torecyclertwithfirebase"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toNoValidEventsbtn"
            android:text="@string/no_valid_events"
            android:onClick="toNoValidEventsB"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/to_Login"
            android:text="@string/to_login_btn"
            android:onClick="tologin"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/to_sign_in"
            android:text="@string/to_singup_btn"
            android:onClick="tosignup"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addNewEvent"
            android:text="@string/add_new_event"
            android:onClick="addNewEventB"
            android:visibility="invisible"/>

    </LinearLayout>
</RelativeLayout>
