<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    android:padding="10dp">

    <android.support.v7.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Eventcardview"
        card_view:cardCornerRadius="11dp"
        android:elevation="10dp"
        android:layout_marginBottom="10dp"
        >
        <LinearLayout
            android:id="@+id/llforRv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ItemEventHeadLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_event_name"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/ItemEventSynopsys"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_event_synopsis"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/ItemEventdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date_format"
                android:textSize="15dp" />

            <RelativeLayout
                android:id="@+id/formoreinfotxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/moreinfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/for_listview_layout"
                    android:textColor="#1a13e7" />

            </RelativeLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>



